fixing status alignment

--- a/less/topic.less
+++ b/less/topic.less
@@ -214,6 +214,10 @@
 		> li {
 			position: relative;
 
+			.status {
+				vertical-align: -2%;
+			}
+
 			&.deleted {
 				.content {
 					.opacity(0.3);
